[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Textures/rocket.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Rocket.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Templates/Trail.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 32.0

[node name="Rocket" type="RigidBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="Trail" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
